# sir_simulator

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.fa.md  README.md  SECURITY.md  SECURITY_TESTS.md  TESTING.md  app.py  cli.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  run_all_tests.py  setup.cfg  sir_model.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md  performance_issue.md
.github/workflows/: security.yml  test.yml
advanced_features/: __init__.py  ml_prediction.py  parameter_optimization.py  scenario_comparison.py
core_models/: __init__.py  network_model.py  seir_model.py  sir_model.py
docs/: notebook.ipynb
src/sir_simulator/: __init__.py
src/sir_simulator/advanced_features/: __init__.py  ml_prediction.py  parameter_optimization.py  scenario_comparison.py
src/sir_simulator/core_models/: __init__.py  network_model.py  seir_model.py  sir_model.py
src/sir_simulator/user_interface/: app.py  cli.py
tests/: test_ml.py  test_network.py  test_optimization.py  test_scenarios.py  test_seir.py
tests/security/: test_dos_attack.py  test_memory_exhaustion.py  test_unicode_attacks.py  test_xss_prevention.py
user_interface/: __init__.py  app.py  cli.py
