[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sir-epidemic"
version = "1.0.1"
description = "A complete epidemic modeling suite with SIR/SEIR models, network simulation, ML prediction, and Streamlit dashboard"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Milad Rezanezhad", email = "miladvf2014@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "streamlit>=1.20.0",
    "networkx>=2.8",
    "scikit-learn>=1.0.0",
    "xgboost>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/miladrezanezhad/sir_simulator"
Repository = "https://github.com/miladrezanezhad/sir_simulator"
Issues = "https://github.com/miladrezanezhad/sir_simulator/issues"
Documentation = "https://github.com/miladrezanezhad/sir_simulator/blob/main/README.md"

[project.scripts]
sir-simulator = "sir_simulator.user_interface.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sir_simulator*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
max-complexity = 10

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["sir_simulator"]
omit = ["tests/*", "tests/security/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]
